--- a/index.html
+++ b/index.html
@@ -44,6 +44,54 @@
     <div class="mx-auto my-3 narrative">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
     </div>
+
+
+    <form class="mx-auto narrative">
+      <div class="card mb-4 shadow-sm">
+        <label for="upload" class="card-body text-center py-5" style="cursor: pointer">
+          <i class="bi bi-cloud-upload fs-1 text-primary mb-2"></i>
+          <h5 class="card-title mb-2">Upload Data Files</h5>
+          <p class="text-muted small mb-0">Drop your .db or .csv files here</p>
+        </label>
+        <input type="file" id="upload" accept=".db,.csv" class="d-none" multiple />
+      </div>
+
+      <div class="card shadow-sm">
+        <div class="card-body">
+          <div class="mb-3">
+            <label for="prompt" class="form-label">System Prompt</label>
+            <textarea class="form-control" id="prompt" rows="3" placeholder="Enter your system prompt here..."></textarea>
+          </div>
+
+          <div class="mb-3">
+            <label for="q" class="form-label">Customer Query</label>
+            <input type="text" class="form-control" id="q" placeholder="What would you like to know about the data?">
+          </div>
+
+          <button type="submit" class="btn btn-primary w-100">
+            <i class="bi bi-search me-2"></i>Analyze
+          </button>
+        </div>
+      </div>
+    </form>
+
+    <details class="narrative mx-auto my-4">
+      <summary class="h4">Schema</summary>
+      <div id="schema"></div>
+    </details>
+
+  </div>
+
+  <div class="toast-container position-fixed top-0 end-0 p-3">
+    <div id="toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="toast-header">
+        <i class="bi bi-info-circle-fill toast-icon me-2"></i>
+        <strong class="me-auto toast-title"></strong>
+        <small class="toast-time"></small>
+        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+      <div class="toast-body"></div>
+    </div>
   </div>
 
   <footer class="my-5 vh-100 d-flex align-items-center justify-content-center">
