--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
 
-    <form class="mx-auto narrative">
+    <form class="mx-auto narrative" id="query-form">
       <div class="card mb-4 shadow-sm">
         <label for="upload" class="card-body text-center py-5" style="cursor: pointer">
           <i class="bi bi-cloud-upload fs-1 text-primary mb-2"></i>
@@ -60,12 +60,29 @@
         <div class="card-body">
           <div class="mb-3">
             <label for="prompt" class="form-label">System Prompt</label>
-            <textarea class="form-control" id="prompt" rows="3" placeholder="Enter your system prompt here..."></textarea>
+            <textarea class="form-control" id="prompt" name="prompt" rows="3" placeholder="Enter your system prompt here...">
+Here is the database schema of a chocolatier's product master data:
+
+```sql
+$SCHEMA
+```
+
+Based on the user's email, respond by searching through this data, identifying the right ingredients, and create a pitch for them.
+
+Use these 2 tools one or more times:
+
+- An SQL query via `sql(query) -> {count, results: [{field: value}, ...]}` that returns the top 10 results
+- Or get the most similar values to a given input from a table's column via `similar(table, column, input) -> [value, ...]` that returns up to 10 results.
+
+Think step by step about how you will answer the question.
+Call one or more tools as required.
+When you have enough results FROM THE DATABASE that match the user question, construct a product pitch in Markdown.
+</textarea>
           </div>
 
           <div class="mb-3">
             <label for="q" class="form-label">Customer Query</label>
-            <input type="text" class="form-control" id="q" placeholder="What would you like to know about the data?">
+            <textarea class="form-control" id="q" name="q" rows="3" placeholder="What would you like to know about the data?"></textarea>
           </div>
 
           <button type="submit" class="btn btn-primary w-100">
