WIP: Run queries

--- a/index.html
+++ b/index.html
@@ -97,6 +97,15 @@ When you have enough results FROM THE DATABASE that match the user question, con
       <div id="schema"></div>
     </details>
 
+    <div class="row" id="controls">
+      <div class="col-lg-8 mb-3" id="filters">
+      </div>
+      <div class="col-lg-4 mb-3">
+      </div>
+    </div>
+
+    <div id="output" class="table-responsive"></div>
+
   </div>
 
   <div class="toast-container position-fixed top-0 end-0 p-3">
