WIP: Add product pitch

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ When you have enough results FROM THE DATABASE that match the user question, con
       </div>
     </div>
 
-    <div id="output" class="table-responsive"></div>
+    <div id="pitch"></div>
 
   </div>
 
