--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
     </div>
 
-
     <form class="mx-auto narrative" id="query-form">
       <div class="card mb-4 shadow-sm">
         <label for="upload" class="card-body text-center py-5" style="cursor: pointer">
@@ -91,7 +90,9 @@ When you have enough results FROM THE DATABASE that match the user question, con
         </div>
       </div>
     </form>
-
+    <div id="wherefilter" class="card mx-auto my-3 narrative text-center d-none" style="width: 18rem;">
+      <h5 class="card-title">Filter</h5>
+    </div>
     <details class="narrative mx-auto my-4">
       <summary class="h4">Schema</summary>
       <div id="schema"></div>
