--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     .narrative {
       max-width: 40rem;
     }
+
+    #summary {
+      margin-bottom: 1.5rem;
+    }
   </style>
 </head>
 
@@ -59,25 +63,16 @@
       <div class="card shadow-sm">
         <div class="card-body">
           <div class="mb-3">
-            <label for="prompt" class="form-label">System Prompt</label>
-            <textarea class="form-control" id="prompt" name="prompt" rows="3" placeholder="Enter your system prompt here...">
-Here is the database schema of a chocolatier's product master data:
+            <label for="prompt" class="form-label">Filters Prompt</label>
+            <textarea class="form-control" id="prompt" name="prompt" rows="3" placeholder="Enter your filtering prompt here...">
+Your task is to identify the right chocolate ingredients given the customer email below.
 
-```sql
+Here is the schema of a chocolatier's product master data.
+
 $SCHEMA
-```
 
-Based on the user's email, respond by searching through this data, identifying the right ingredients, and create a pitch for them.
-
-Use these 2 tools one or more times:
-
-- An SQL query via `sql(query) -> {count, results: [{field: value}, ...]}` that returns the top 10 results
-- Or get the most similar values to a given input from a table's column via `similar(table, column, input) -> [value, ...]` that returns up to 10 results.
-
-Think step by step about how you will answer the question.
-Call one or more tools as required.
-When you have enough results FROM THE DATABASE that match the user question, construct a product pitch in Markdown.
-</textarea>
+A customer email is provided below. Write the filters that will help identify the right ingredients.
+Quote the EXACT requirement VERBATIM from the customer email.</textarea>
           </div>
 
           <div class="mb-3">
@@ -85,8 +80,13 @@ When you have enough results FROM THE DATABASE that match the user question, con
             <textarea class="form-control" id="q" name="q" rows="3" placeholder="What would you like to know about the data?"></textarea>
           </div>
 
+          <div class="mb-3">
+            <label for="main-field" class="form-label">Main Field</label>
+            <input type="text" class="form-control" id="main-field" name="main-field" placeholder="Main field name" value="">
+          </div>
+
           <button type="submit" class="btn btn-primary w-100">
-            <i class="bi bi-search me-2"></i>Analyze
+            <i class="bi bi-search me-2"></i> Analyze
           </button>
         </div>
       </div>
@@ -98,15 +98,14 @@ When you have enough results FROM THE DATABASE that match the user question, con
     </details>
 
     <div class="row" id="controls">
-      <div class="col-lg-8 mb-3" id="filters">
-      </div>
-      <div class="col-lg-4 mb-3">
-      </div>
+      <div class="mb-3" id="summary"></div>
+      <div class="mb-3" id="filters"></div>
     </div>
-
-    <div id="pitch"></div>
-
   </div>
+
+  <div class="container-fluid" id="results"></div>
+
+  <div id="pitch"></div>
 
   <div class="toast-container position-fixed top-0 end-0 p-3">
     <div id="toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
@@ -126,6 +125,7 @@ When you have enough results FROM THE DATABASE that match the user question, con
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" type="module"></script>
   <script src="https://cdn.jsdelivr.net/npm/@gramex/ui@0.3/dist/dark-theme.js" type="module"></script>
+  <script src='https://cdn.jsdelivr.net/gh/FThompson/FormPersistence.js@2.0.6/form-persistence.min.js'></script>
   <script src="script.js" type="module"></script>
 </body>
 
