FIX: Last minute bugs

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Quote the EXACT requirement VERBATIM from the customer email.</textarea>
 
           <div class="mb-3">
             <label for="q" class="form-label">Customer Query</label>
-            <textarea class="form-control" id="q" name="q" rows="3" placeholder="What would you like to know about the data?"></textarea>
+            <textarea class="form-control" id="q" name="q" rows="3" placeholder="What products does the customer want?"></textarea>
           </div>
 
           <div class="mb-3">
